Implement next:

    RELEASE HERE PROBABLY

    * Design general purpose 'model' or 'transition relation' interface

    * Relational product operations, using new interface

    * Saturation operations, using new interface

    * Again explore mark and sweep vs reference counts
      try a 'mark and count down' approach also


Operation updates, to do:
    * re-implement operations using new CT interface
    * eventually: remove CTs from operation base class
    * eventually: remove entry registration from operation base class




======================================================================
Completely reimplemented operations
======================================================================

arith_max.cc
arith_min.cc
arith_plus.cc
arith_minus.cc
arith_mult.cc
arith_div.cc
arith_mod.cc

cardinality.cc
cross.cc
compare.cc
complement.cc
copy.cc

difference.cc
intersection.cc
maxmin_range.cc
union.cc

mdd2index.cc

======================================================================
Operations with no need for updating
======================================================================

select.cc       -> DEPRECATED

vect_matr.cc

======================================================================
Operations that need updating
======================================================================

constrained.cc
        NO      constrained_forwd_dfs_mt
        NO      constrained_bckwd_dfs_mt
        NO      constrained_bckwd_dfs_evplus

cycle.cc
        NO      cycle_EV2EV


mm_mult.cc
        NO      mm_mult_mt

prepostimage.cc
        NO      mtmatr_mtvect
        NO      mtmatr_evplusvect
        NO      tcXrel_evplus

prepostplus.cc
        NO      preplus_evplus
        NO      postplus_evplus

reach_bfs.cc
        NO      forwd_bfs_mt
        NO      forwd_bfs_evplus
        NO      bckwd_bfs_mt
        NO      bckwd_bfs_evplus

reach_dfs.cc
        NO      forwd_dfs_mt
        NO      forwd_dfs_evplus
        NO      bckwd_dfs_mt
