@@ -30,8 +30,8 @@ int* MEDDLY::ev_forest::order;
 int  MEDDLY::ev_forest::order_size;
 
 MEDDLY::ev_forest::ev_forest(domain *d, bool rel,
-  range_type t, edge_labeling ev, const policies &p, int* level_reduction_rule)
-: forest(d, rel, t, ev, p, level_reduction_rule)
+  range_type t, edge_labeling ev, const policies &p)
+: forest(d, rel, t, ev, p)
 {
   MEDDLY_DCASSERT(ev != edge_labeling::MULTI_TERMINAL);
 }
