@@ -28,8 +28,7 @@ namespace MEDDLY {
 
 class MEDDLY::evmxd_forest : public ev_forest {
   public:
-    evmxd_forest(domain* d, range_type t, edge_labeling ev,
-      const policies &p, int* level_reduction_rule=NULL);
+    evmxd_forest(domain* d, range_type t, edge_labeling ev, const policies &p);
 
     virtual void reorderVariables(const int* level2var);
     virtual void swapAdjacentVariables(int level);
