@@ -34,8 +34,8 @@ int* MEDDLY::mt_forest::order;
 int  MEDDLY::mt_forest::order_size;
 
 MEDDLY::mt_forest::mt_forest(domain *d, bool rel,
-  range_type t, const policies &p, int* level_reduction_rule)
-: forest(d, rel, t, edge_labeling::MULTI_TERMINAL, p, level_reduction_rule)
+  range_type t, const policies &p)
+: forest(d, rel, t, edge_labeling::MULTI_TERMINAL, p)
 {
     setVoidEdges();
 }
