@@ -24,8 +24,8 @@
 #include "../unique_table.h"
 
 MEDDLY::mtmdd_forest
-::mtmdd_forest(domain* d, range_type t, const policies &p, int* level_reduction_rule)
- : mt_forest(d, false, t, p, level_reduction_rule)
+::mtmdd_forest(domain* d, range_type t, const policies &p)
+ : mt_forest(d, false, t, p)
 {
   // anything to construct?
 }
