@@ -27,7 +27,7 @@ namespace MEDDLY {
 
 class MEDDLY::mtmxd_forest : public mt_forest {
   public:
-    mtmxd_forest(domain* d, range_type t, const policies &p, int* level_reduction_rule=NULL);
+    mtmxd_forest(domain* d, range_type t, const policies &p);
 
     virtual void swapAdjacentVariables(int level);
     virtual void moveDownVariable(int high, int low);
