@@ -19,8 +19,8 @@
 
 #include "mtmxdreal.h"
 
-MEDDLY::mt_mxd_real::mt_mxd_real(domain *d, const policies &p, int* level_reduction_rule, float tv)
-: mtmxd_forest(d, range_type::REAL, p, level_reduction_rule)
+MEDDLY::mt_mxd_real::mt_mxd_real(domain *d, const policies &p, float tv)
+: mtmxd_forest(d, range_type::REAL, p)
 {
     terminal t(tv);
     setTransparentEdge(t.getHandle());
